[package]
name = "bustrace"
version = "0.1.0"
authors = ["Berkus Decker <berkus+github@metta.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
fern = "0.6.0"
ini = "1.3.0"
log = "0.4.14"
rodbus = "0.1.1"
tokio = { version = "^0.2.11", features = ["macros", "time"] }
